# litrev_mcp

./: .gitignore  LICENSE  README.md  litrev-mcp-spec.md  pyproject.toml
docs/: index.html  script.js  style.css
scripts/: migrate_to_motherduck.py
skills/init-litrev-context/: SKILL.md
src/litrev_mcp/: __init__.py  config.py  server.py  templates.py
src/litrev_mcp/progress/: __init__.py  server.py  tracker.py
src/litrev_mcp/progress/static/: dashboard.html
src/litrev_mcp/setup/: __init__.py
src/litrev_mcp/tools/: __init__.py  argument_map.py  argument_map_db.py  argument_map_search.py  concept_map.py  concept_map_db.py  context.py  epub_utils.py  eric.py  formats.py  gdrive.py  insights.py  mathpix.py  migrate_to_argument_map.py  pdf.py  pdf_utils.py  pubmed.py  rag.py  rag_db.py  rag_embed.py  raw_http.py  reset_to_argument_map.py  semantic_scholar.py  setup.py  status.py  workflow.py  zotero.py
tests/: __init__.py  test_argument_map_search.py  test_config.py  test_epub.py  test_extract_concepts.py  test_insights.py  test_rag.py  test_raw_http.py  test_search_apis.py  test_setup.py  test_status.py  test_zotero.py
todo/: concept_map_implementation_guide.md
todo/archieve/: litrev_mcp_best_practices.md
