[project]
name = "litrev-mcp"
version = "0.1.0"
description = "MCP server for AI-assisted literature review with Zotero, PubMed, and Semantic Scholar integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyzotero>=1.5.0",
    "biopython>=1.80",
    "semanticscholar>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "PyDrive2>=1.19.0",
    "duckdb>=1.0.0",
    "openai>=1.0.0",
]

[project.scripts]
litrev-mcp = "litrev_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litrev_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
